@@ -21,13 +21,17 @@
         <imagedata fileref="larch.png"/>
       </imageobject>
     </mediaobject>
-    <note> This is a paragraph</note>
+    <note>
+      <para> This is a paragraph</para>
+    </note>
     <itemizedlist>
       <listitem>
         <para>Here is a bullet list.</para>
       </listitem>
     </itemizedlist>
-    <caution> modify at your own risk!</caution>
+    <caution>
+      <para> modify at your own risk!</para>
+    </caution>
     <mediaobject>
       <imageobject>
         <imagedata fileref="larch.png"/>
